<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="authorsAvatar">Authors avatar</string>
    <string name="options_button">Options button</string>
    <string name="likes_sign">Likes amount</string>
    <string name="share_sign">Share sign</string>
    <string name="views_sign">Views sign</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="write_your_text_here">Text</string>
    <string name="SaveButton">SaveButton</string>
    <string name="EditImage">EditImage</string>
    <string name="EditTextTop">EditTextTop</string>
    <string name="EditTextBottom">EditTextBottom</string>
    <string name="CancelEditButton">CancelEditButton</string>
    <string name="edit_text">Edit text</string>
    <string name="chooser_share_post">Share post</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s published a new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>

</resources>