<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/authorsAvatar"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/usersName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/optionsButton"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Нетология. Университет интернет-профессий" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/usersName"
        app:layout_constraintStart_toStartOf="@id/usersName"
        app:layout_constraintTop_toBottomOf="@id/usersName"
        tools:text="16 апреля 2022" />

    <Button
        android:id="@+id/optionsButton"
        style="@style/Widget.App.Button.MyStyle"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        app:iconPadding="0dp"
        app:rippleColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/options_button"
        app:icon="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, date, optionsButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        tools:text="Это новая Нетология." />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="mainText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesImage"
        style="@style/Widget.AppTheme.LiveCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/likes_sign"
        app:icon="@drawable/ic_like_24new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        tools:text="100" />

    <Button
        android:id="@+id/shareImage"
        style="@style/Widget.App.Button.MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_sign"
        app:icon="@drawable/ic_share_24dp"
        app:layout_constraintStart_toEndOf="@id/likesImage"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        tools:text="100"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/viewsImage"
        android:contentDescription="@string/views_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/viewsAmount"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        android:src="@drawable/ic_views_eye_24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="12sp"
        android:id="@+id/viewsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        tools:text="1" />

</androidx.constraintlayout.widget.ConstraintLayout>